2010-07-22  Martin Jambor  <mjambor@suse.cz>

	PR tree-optimization/44891
	* tree-sra.c: Include gimple-pretty-print.h.
	(replace_uses_with_default_def_ssa_name): Renamed to
	get_repl_default_def_ssa_name, return the new SSA name instead of
	replacing the old one.
	(sra_modify_assign): Dump a message when removing a load, if the LHS
	is an SSA_NAME, do not do any propagation, just set the RHS to a
	default definition SSA NAME, type convert if necessary.
	* Makefile.in (tree-sra.o): Add gimple-pretty-print.h to dependencies.

2010-07-22  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/45017
	* tree-ssa-sccvn.c (vn_reference_eq): Make sure we honor
	TYPE_PRECISION of integral types in addition to size.

2010-07-22  Maxim Kuvyrkov  <maxim@codesourcery.com>

	* config/rs6000/sysv4.h (CHOOSE_DYNAMIC_LINKER): Default to GLIBC
	when no C library is specified.

2010-07-22  Martin Jambor  <mjambor@suse.cz>

	* ipa-prop.h (struct ipa_node_params): Updated comment.
	(struct ipa_edge_args): Likewise.
	* Makefile.in (ipa-prop.o): Remove bogus $(GIMPLE_FOLD_H) dependency.

2010-07-22  Martin Jambor  <mjambor@suse.cz>

	* cgraphunit.c (verify_edge_count_and_frequency): New function.
	(verify_cgraph_node): Verify frequencies of indirect edges.
	* tree-inline.c (tree_function_versioning): Update frequencies of
	indirect edges.

2010-07-22  Ramana Radhakrishnan  <ramana.radhakrishnan@arm.com>

 	PR target/43698
	* config/arm/arm.md: Split arm_rev into *arm_rev
	and *thumb1_rev. Set *arm_rev to be predicable.

2010-07-22  Iain Sandoe  <iains@gcc.gnu.org>

	* config/darwin.h (LINK_COMMAND_SPEC): Split into...
	(LINK_COMMAND_SPEC_A): New.
	(DSYMUTIL): New.
	(DSYMUTIL_SPEC): New.
	* config/darwin9.h (LINK_COMMAND_SPEC): Remove.
	(DSYMUTIL_SPEC): Update for darwin >= 9 requirements.

2010-07-22  Iain Sandoe  <iains@gcc.gnu.org>

	* calls.c (load_register_parameters): Move check for zero
	sized items so that only the call to 